# epp_final_project_machine_labor

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
paper/: machine_labor.tex  machine_labor_pres.nav  machine_labor_pres.snm  machine_labor_pres.tex  refs.bib  task_paper.py
src/machine_labor/: config.py
src/machine_labor/analysis/: predict_mw.py  task_analysis.py  task_predict.py  task_predict_mw.py
src/machine_labor/data_management/: __init__.py  clean_data.py  clean_data_MW.py  task_clean_mw.py  task_compl_input_data.py  task_data_management.py
src/machine_labor/final/: __init__.py  plot_tables_mw.py  task_final.py  task_final_mw.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: data_info_fixture.yaml  test_clean_data.py  test_clean_data_mw.py
